# stablehlo

./: .bazelrc  .bazelrc.ci  .clang-format  .fractal-commit-lint.toml  .gitignore  .gitmessage  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE.bazel
.claude/knowledge/: architecture.md  testing-guide.md
.gemini/: config.yaml
.github/: actionlint.yaml
.github/workflows/: buildAndTestBazel.yml  buildAndTestCMake.yml  ci.yml  commit-lint.yml  execute_tutorials.yml  notify-downstream.yml  pin-bump.yml  project-tracker.yml  publishWheelRelease.yml
bazel/: stablehlo_deps.bzl  stablehlo_deps2.bzl  stablehlo_deps3.bzl
build_tools/github_actions/: ci_build_docs.sh  lint_check_license.sh
build_tools/rbe/: BUILD.bazel
stablehlo/conversions/PrimeIRToStablehlo/: BUILD.bazel  PrimeIRToStablehlo.cpp  PrimeIRToStablehlo.h
stablehlo/conversions/StablehloToPrimeIR/: BUILD.bazel  StablehloToPrimeIR.cpp  StablehloToPrimeIR.h
stablehlo/dialect/: AssemblyFormat.cpp  AssemblyFormat.h  BUILD.bazel  Base.cpp  Base.h  Base.td  ChloOps.cpp  Register.cpp  Register.h  StablehloAttrs.td  StablehloBytecode.cpp  StablehloBytecode.h  StablehloEnums.td  StablehloOps.cpp  StablehloOps.h  StablehloOps.td  StablehloTypes.td  TypeInference.cpp  TypeInference.h  Version.cpp  Version.h  VhloAttrs.td  VhloBase.td  VhloBytecode.cpp  VhloBytecode.h  VhloDialect.td  VhloEnums.td  VhloOps.cpp  VhloOps.h  VhloOps.td  VhloTypes.cpp  VhloTypes.h  VhloTypes.td
stablehlo/integrations/c/: BUILD.bazel  StablehloAttributes.cpp  StablehloAttributes.h  StablehloDialect.cpp  StablehloDialect.h  StablehloTypes.cpp  StablehloTypes.h
stablehlo/integrations/python/: BUILD.bazel  StablehloModule.cpp
stablehlo/integrations/python/mlir/dialects/: StablehloOps.td  stablehlo.py
stablehlo/reference/: InterpreterOps.cpp
stablehlo/tests/: BUILD.bazel  CheckOps.cpp  canonicalize_zk.mlir  constant.mlir  lit.cfg.py  ops_stablehlo.mlir  ops_stablehlo_field_ec.mlir  ops_stablehlo_zk.mlir
stablehlo/tests/transforms/: stablehlo_aggressive_folder_zk.mlir  stablehlo_refine_shapes.mlir  stablehlo_to_prime_ir.mlir
stablehlo/tests/vhlo/: stablehlo_legalize_to_vhlo.mlir  stablehlo_legalize_to_vhlo_zk.mlir  vhlo_to_version_downgrade_invalid_zk.1_12_0.mlir  zk_ops_roundtrip.mlir
stablehlo/tools/: BUILD.bazel  StablehloOptMain.cpp  StablehloTranslateMain.cpp
stablehlo/transforms/: BUILD.bazel  MapStablehloToVhlo.h  PassPipelines.cpp  Passes.h  Passes.td  PrimeIRToStablehlo.cpp  StablehloLegalizeToVhlo.cpp  StablehloRefineShapes.cpp  StablehloToPrimeIR.cpp  VhloLegalizeToStablehlo.cpp  VhloToVersion.cpp  VhloToVersionPatterns.td
stablehlo/transforms/optimization/: StablehloAggressiveFolder.cpp  StablehloAggressiveSimplification.cpp  StablehloAggressiveSimplificationPatterns.td
