# Copyright 2023 The StableHLO Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""Workspace for StableHLO."""

workspace(name = "stablehlo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Replicate prime_ir's WORKSPACE setup: rules_cc and bazel_features must be
# declared before any rule that pulls in an older version (Bazel http_archive
# resolution is first-wins).
# Versions are bumped above prime_ir's (rules_cc 0.2.13 / bazel_features 1.36.0)
# to the floors toolchains_llvm v1.7.0 requires: its generated @llvm_toolchain
# BUILD reads bazel_features.rules.merkle_cache_v2 (absent before 1.43.0; on
# Bazel 7 it evaluates False, selecting toolchains_llvm's legacy code paths —
# the field merely has to exist) and calls rules_cc's cc_toolchain_config with
# extra_{known,enabled}_features (added in rules_cc 0.2.17).
http_archive(
    name = "bazel_features",
    sha256 = "c26b4e69cf02fea24511a108d158188b9d8174426311aac59ce803a78d107648",
    strip_prefix = "bazel_features-1.43.0",
    urls = ["https://github.com/bazel-contrib/bazel_features/archive/refs/tags/v1.43.0.tar.gz"],
)

load("@bazel_features//:deps.bzl", "bazel_features_deps")

bazel_features_deps()

http_archive(
    name = "rules_cc",
    sha256 = "283fa1cdaaf172337898749cf4b9b1ef5ea269da59540954e51fba0e7b8f277a",
    strip_prefix = "rules_cc-0.2.17",
    urls = ["https://github.com/bazelbuild/rules_cc/archive/refs/tags/0.2.17.tar.gz"],
)

load("@rules_cc//cc:extensions.bzl", "compatibility_proxy_repo")

compatibility_proxy_repo()

# Hermetic C++ toolchain (clang 20.1.7) so action keys don't depend on whatever
# clang sits on the worker PATH. bazel_features_deps() and compatibility_proxy_repo()
# above already satisfy toolchains_llvm v1.7.0's two new mandatory load steps, so
# the chain below skips them. bazel_toolchain_dependencies() is guarded by
# native.existing_rule(), so the rules_cc / bazel_features pins declared above win.
http_archive(
    name = "toolchains_llvm",
    canonical_id = "v1.7.0",
    sha256 = "85c341e957ba58482892a8088e4a34391d15bd98917f0993ecb62f008d6986d6",
    strip_prefix = "toolchains_llvm-v1.7.0",
    url = "https://github.com/bazel-contrib/toolchains_llvm/releases/download/v1.7.0/toolchains_llvm-v1.7.0.tar.gz",
)

load("@toolchains_llvm//toolchain:deps.bzl", "bazel_toolchain_dependencies")

bazel_toolchain_dependencies()

# Pin an explicit Chromium sysroot (debian bullseye amd64) so worker glibc/libtinfo
# never leaks into action outputs — the LLVM 20.x generic tarball otherwise resolves
# the non-hermetic host /usr. The filegroup name + extraction layout match
# toolchains_llvm's `sysroot` repo rule convention, reproduced via
# http_archive to avoid its aspect_bazel_lib/bsdtar dep chain — but with
# glob(["**"]) where the convention uses srcs ["."]: the latter feeds the
# repo ROOT into every compile action as a single directory artifact,
# which bazel flags ("dependency checking of directories is unsound") once
# per consuming target and cannot hash incrementally. Per-file artifacts
# are tracked soundly and keep logs quiet.
http_archive(
    name = "org_chromium_sysroot_linux_x64",
    build_file_content = """filegroup(
    name = "sysroot",
    srcs = glob(
        ["**"],
        # systemd unit filenames contain literal backslash escapes, which
        # are invalid in bazel labels — and nothing in a compile or link
        # ever reads them.
        exclude = ["lib/systemd/**"],
    ),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "52d61d4446ffebfaa3dda2cd02da4ab4876ff237853f46d273e7f9b666652e1d",
    # The chromium sysroot URL is sha256-keyed with no file extension, so Bazel
    # cannot infer the archive format — declare it explicitly.
    type = "tar.xz",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/52d61d4446ffebfaa3dda2cd02da4ab4876ff237853f46d273e7f9b666652e1d"],
)

load("@toolchains_llvm//toolchain:rules.bzl", "llvm_toolchain")

llvm_toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.7",
    sysroot = {
        "linux-x86_64": "@org_chromium_sysroot_linux_x64//:sysroot",
    },
)

load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()

load("//third_party/prime_ir:workspace.bzl", prime_ir = "repo")

prime_ir()

# prime_ir's transitive deps (zk_dtypes, hermetic Python).
load("@prime_ir//third_party/zk_dtypes:workspace.bzl", zk_dtypes = "repo")

zk_dtypes()

load("@zk_dtypes//third_party/py:python_init_rules.bzl", "python_init_rules")

python_init_rules()

load("@zk_dtypes//third_party/py:python_init_repositories.bzl", "python_init_repositories")

python_init_repositories(
    requirements = {
        "3.11": "@prime_ir//:requirements_lock_3_11.txt",
    },
)

load("@zk_dtypes//third_party/py:python_init_toolchains.bzl", "python_init_toolchains")

python_init_toolchains()

load("@zk_dtypes//third_party/py:python_init_pip.bzl", "python_init_pip")

python_init_pip()

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

load("@zk_dtypes//bazel:zk_dtypes_deps.bzl", "zk_dtypes_deps")

zk_dtypes_deps()

# rules_java's @compatibility_proxy must exist before any rule (e.g. protobuf)
# loads java_info.bzl. rules_java_dependencies() creates that proxy repo.
load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()

http_archive(
    name = "bazel_skylib",
    sha256 = "74d544d96f4a5bb630d465ca8bbcfe231e3594e5aae57e1edbf17a6eb3ca2506",
    urls = [
        "https://storage.googleapis.com/mirror.tensorflow.org/github.com/bazelbuild/bazel-skylib/releases/download/1.3.0/bazel-skylib-1.3.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.3.0/bazel-skylib-1.3.0.tar.gz",
    ],
)

# This is needed since https://reviews.llvm.org/D143344.
# Not sure if it's a bug or a feature, but it doesn't hurt to keep an additional
# dependency here.
http_archive(
    name = "llvm_zstd",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zstd.BUILD",
    sha256 = "7c42d56fac126929a6a85dbc73ff1db2411d04f104fae9bdea51305663a83fd0",
    strip_prefix = "zstd-1.5.2",
    urls = [
        "https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz",
    ],
)

# This is needed since https://reviews.llvm.org/D143320
# Not sure if it's a bug or a feature, but it doesn't hurt to keep an additional
# dependency here.
http_archive(
    name = "llvm_zlib",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zlib-ng.BUILD",
    sha256 = "e36bb346c00472a1f9ff2a0a4643e590a254be6379da7cddd9daeb9a7f296731",
    strip_prefix = "zlib-ng-2.0.7",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
    ],
)

http_archive(
    name = "rules_shell",
    sha256 = "bc61ef94facc78e20a645726f64756e5e285a045037c7a61f65af2941f4c25e1",
    strip_prefix = "rules_shell-0.4.1",
    url = "https://github.com/bazelbuild/rules_shell/releases/download/v0.4.1/rules_shell-v0.4.1.tar.gz",
)

###############################
# Initialize non-hermetic Python

rules_python_version = "0.30.0"

http_archive(
    name = "rules_python",
    strip_prefix = "rules_python-{}".format(rules_python_version),
    url = "https://github.com/bazelbuild/rules_python/releases/download/{}/rules_python-{}.tar.gz".format(rules_python_version, rules_python_version),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_version = "3.11"

python_register_toolchains(
    name = "local_config_python",  #"python_{}".format(python_version_),
    # Available versions are listed in @rules_python//python:versions.bzl.
    # We recommend using the same version your team is already standardized on.
    python_version = python_version,
)

#These need to come in this specific order otherwise bazel complains of missing/circular dependencies.
load("//third_party/llvm:workspace.bzl", llvm = "repo")

llvm("llvm-raw")

load("//third_party/llvm:setup.bzl", "llvm_setup")

llvm_setup("llvm-project")
