# Copyright 2026 Fractalyze, Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Remote-execution platform: describes the worker environment so bazel can
# schedule actions onto it via --extra_execution_platforms (config=remote).
#
# Every exec_properties key must appear in the remote scheduler's
# supported_platform_properties or the action is rejected; a value mismatch
# on an exact-match key strands the action queued. Keep this file generic —
# deployment-specific properties (e.g. an audit-only container-image digest)
# are injected per machine via --remote_default_exec_properties in the
# untracked .bazelrc.user, alongside the executor endpoint and TLS paths.

package(default_visibility = ["//visibility:public"])

platform(
    name = "linux_remote",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "cpu_arch": "x86_64",
    },
)
