# Copyright 2026 The StableHLO(Fractalyze) Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

td_library(
    name = "passes_td_files",
    srcs = ["Passes.td"],
    includes = ["../.."],
    deps = ["@llvm-project//mlir:PassBaseTdFiles"],
)

gentbl_cc_library(
    name = "passes_inc_gen",
    strip_include_prefix = ".",
    tbl_outs = {
        "Passes.h.inc": ["-gen-pass-decls"],
    },
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "Passes.td",
    deps = [":passes_td_files"],
)

td_library(
    name = "vhlo_to_version_patterns_td_files",
    srcs = ["VhloToVersionPatterns.td"],
    includes = ["../.."],
    deps = [
        "//stablehlo/dialect:vhlo_ops_td_files",
        "@llvm-project//mlir:OpBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "vhlo_to_version_patterns_inc_gen",
    strip_include_prefix = ".",
    tbl_outs = {
        "VhloToVersionPatterns.h.inc": ["-gen-rewriters"],
    },
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "VhloToVersionPatterns.td",
    deps = [":vhlo_to_version_patterns_td_files"],
)

cc_library(
    name = "passes",
    srcs = [
        "PassPipelines.cpp",
        "VhloLegalizeToStablehlo.cpp",
        "VhloToVersion.cpp",
    ],
    hdrs = [
        "MapStablehloToVhlo.h",
        "Passes.h",
    ],
    strip_include_prefix = ".",
    deps = [
        ":passes_inc_gen",
        ":vhlo_to_version_patterns_inc_gen",
        "//stablehlo/dialect:stablehlo_ops",
        "//stablehlo/dialect:stablehlo_ops_inc_gen",
        "//stablehlo/dialect:version",
        "//stablehlo/dialect:vhlo_ops",
        "//stablehlo/dialect:vhlo_types",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Rewrite",
        "@llvm-project//mlir:ShapeDialect",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TransformUtils",
        "@llvm-project//mlir:Transforms",
    ],
)
